
 - Fixed Bugzilla 30853: made System.out printing conditional upon
   log4j.debug system property. [*]
 
 - Fixed Bugzilla 30623, better JavaDoc for DailyRollingFileAppender#getDatePattern.
   http://issues.apache.org/bugzilla/show_bug.cgi?id=30623 [*]

 - Fixed Bugzilla 34747: DBAppender reused Statement objects inappropriately.
   http://issues.apache.org/bugzilla/show_bug.cgi?id=34747 [*]
 
  
  January 20th, 2005
 - Release of version 1.3alpha-6

 - Fixed involuntary omission of DOMConfigrator (deprecated) in log4j-VERSION.jar.
 - Added missing files in log4-oro.jar.
 - The lengthy system property "log4j.repositorySelectorClass" was renamed as 
   "log4j.repositorySelector".
  
  January 19th, 2005
 - Release of version 1.3alpha-5

 - Universal and Generic Logging Interface (UGLI) is now part of log4j. 
   UGLI allows variation in the logging API implementattion in a simple and 
   robust way. Log4j directly supports the interfaces defined by UGLI. 
   For more information see http://logging.apache.org/log4j/docs/ugli.html [*]
   
 - Log4j now ships with several jar files, one jar file per dependency. [*/**]  
 
 - Fixed Bugzilla 15198: TelnetAppender: NullPointerException if
   SocketHandler not initialized. [*]

 - Fixed Bugzilla 12112: CountingQuietWriter miscounts bytes. [*]

 - Fixed Bugzilla 18076: setting of firstTime in OnlyOnceErrorHandler. [*]

 - Added pattern conversion support for the Subject line for emails 
   generated by  SMTPAppender. The set of patterns is the same as those 
   supported by PatternLayout. [*]

 - Implemented Bugzilla 20985: charset support for SMTPAppender [**]
  
 - Implemented Bugzilla 20500: separate registry clearing from doConfigure in PropertyConfigurator
   to allow to easier extension. [*]

 - Fixed Bugzilla 23912: unsafe access to BoundedFIFO in AsyncAppender. [*]

 - Changed converter register accessors in PatternParser to take/return Map instead