@@ -369,6 +369,8 @@
   </div>
               	 <div class="menu_item">        <a href="./documentation.html">Documentation</a>
   </div>
+              	 <div class="menu_item">        <a href="./chainsaw.html">Chainsaw</a>
+  </div>
               	 <div class="menu_item">        <a href="./plan.html">Roadmap</a>
   </div>
               	 <div class="menu_item">        <a href="http://wiki.apache.org/logging-log4j/Log4JProjectPages">Wiki</a>
